--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="container px-5 py-24 mx-auto flex flex-col">
       <div class="lg:w-4/6 mx-auto">
         <div class="rounded-lg h-64 overflow-hidden" id="rainbow" style="box-shadow:10px 10px 5px grey">
-          <img alt="content" class="object-cover object-center h-full w-full" src="quench1.jpg">
+          <img alt="content" class="object-cover object-center h-full w-full" src="quench1.JPG">
         </div>
         <div class="flex flex-col sm:flex-row mt-10">
           <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
