--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 if (screen.width <= 800) {
   document.body.blur();
       window.alert("Redirecting to Mobile site");
-  window.location = "mobile.html";
+  window.location = "m-site.html";
 }
 </script>
 
