--- a/m-site.html
+++ b/m-site.html
@@ -185,7 +185,7 @@
           
           </a>
         <a href="https://www.facebook.com/RotaractRVCE/" class="mr-5 hover:text-gray-900" id="navhigh">Facebook</a>
-        
+	       <a href="pay.html">test register</a>
       </nav>
     </div> 
   </header>
